--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     {% block head%}
     <head>
-        <title>Title</title>
+        <title>Strongskill</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <link rel="stylesheet" href="main.css">
