--- a/templates/main2.html
+++ b/templates/main2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Strongskill</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -47,9 +47,7 @@ of Simple CSS Waves-->
     <!--Header ends-->
     
     <!--Content starts-->
-    <div class="content flex">
-      <p>By.Goodkatz | Free to use </p>
-    </div>
+ 
     <!--Content ends-->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
