--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,9 @@
                 <div class="testimonial-text-box">
                     <h1>Camping</h1>
                     <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, ad.
+                      
                     </h3>
+                    
                 </div>
               
                 <div class="testimonial-costumer">
@@ -100,9 +102,11 @@
           <div class="footer-form">
             <h2>Sign up for our newsletter</h2>
             <p>We send emails with news, articles and information about our promotions.<br>No junk mail, we promise!</p>
-            <form>
-              <input type="email" name="mail" placeholder="Enter your email to update" required>
-              <input type="submit" value="Submit">
+            <form >
+              <input type="email" name="mail" placeholder="Enter your email to update" style=" border-radius:40px; text-align:center;"  required>
+              <div style="background-color:#fff; background-color:#fff; width:150px; height:30px; border-radius:40px; text-align:center;" >
+                <h3> <a href="#" class="btn" style="padding:13px; background-color:#fff; margin-top:10px; border-radius:30px;  "><h5><b>Discover More</b></h5></a>
+             </div>
             </form>
           </div>
     
