--- a/templates/main.html
+++ b/templates/main.html
@@ -14,7 +14,7 @@
                     <!-- Grid Item #1 -->
                     <div class="activities-grid-item star-gazing" data-aos="flip-left"
                     data-aos-easing="ease-out-cubic"
-                    data-aos-duration="2000">
+                    style=" box-shadow: 0 2px 10px -3px #117964;">
                         <i class="icon ion-md-star"></i>
                         <h1>Star Gazing</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis 
@@ -29,7 +29,7 @@
                     <!-- Grid Item #2 -->
                     <div class="activities-grid-item hiking" data-aos="flip-left"
                     data-aos-easing="ease-out-cubic"
-                    data-aos-duration="3000">
+                    data-aos-duration="3000" style=" box-shadow: 0 2px 10px -3px #117964;">
                         <i class="icon ion-md-compass"></i>
                         <h1>Hiking</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis 
@@ -44,7 +44,7 @@
                     <!-- Grid Item #3 -->
                     <div class="activities-grid-item camping" data-aos="flip-right"
                     data-aos-easing="ease-out-cubic"
-                    data-aos-duration="3000">
+                    data-aos-duration="3000" style=" box-shadow: 0 2px 10px -3px #117964;">
                         <i class="icon ion-md-bonfire"></i>
                         <h1>Camping</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis 
@@ -61,6 +61,104 @@
         </section>
         
 
+
+<!--
+        <section class="container">
+            <div class="row">
+              <div class="col-sm-6">
+                <p>Information Technology</p>
+                <img src="https://media.istockphoto.com/photos/experienced-engineer-explaining-the-problems-in-construction-works-picture-id1267010934?k=20&m=1267010934&s=612x612&w=0&h=orOoQ1keF4d0axah0pr5HENABscij3Nxg-PKUV_7YK0=">
+              </div>
+              <div class="col-sm-6">
+                <p>Shipping</p>
+                <img src="https://media.istockphoto.com/photos/construction-site-view-with-tower-crane-picture-id940251778?k=20&m=940251778&s=612x612&w=0&h=bV_JpVkR4NDwsTzNffJPyhhPfmqzUTiJLi9OfodjiCY=">
+              </div>
+              <div class="col-sm-6">
+                <p>Education</p>
+                <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=">
+              </div>
+              <div class="col-sm-6">
+                <p>Artificial Intelligence</p>
+                <img src="https://media.istockphoto.com/photos/engineer-and-businessman-handshake-at-construction-site-picture-id1189913170?k=20&m=1189913170&s=612x612&w=0&h=Y_OjzAy8qiop3cglkVFitzY42TnYyEphyOfj1owqO2Q=">
+              </div>
+            </div>
+         
+          </section>
+        -->
+        <div class="adventure-grid-item"data-aos="fade-up" data-aos-delay="400">
+            <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px; margin-top:80px;height:400px;">
+            
+                
+            </p>
+        </div>
+    
+        <section class="begin-adventure" id="about">
+            <div class="container">
+                <div class="title-heading">
+                   
+                    <h1 ><b>Adventure begins</b></h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="adventure-grid" data-aos="fade-up" data-aos-delay="300">
+                    <!-- Adventure grid item #1 -->
+                    <div class="adventure-grid-item" style="box-shadow:20px;">
+                        <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;border-radius:30px;">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                            Ea doloribus corporis deserunt  deleniti!
+                            <div style="background-color:blue; width:150px; height:50px; border-radius:30px;">
+                                <a class="btn" href="#" style="color:#fff; padding:15px; margin-left:15px;"><h5><b>Explore ----</b></h5></a>
+                                            </div>
+                        </p>
+                    </div>
+                    <!-- Adventure grid item #2 -->
+                    <div class="adventure-grid-item" data-aos="fade-up" data-aos-delay="300" >
+                        <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;border-radius:30px;">
+                        
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                            Ea doloribus corporis deserunt deleniti!
+                            <div style="background-color:blue; width:150px; height:50px; border-radius:30px; ">
+                                <a class="btn" href="#" style="color:#fff; padding:15px; margin-left:15px;"><h5><b>Explore ----</b></h5></a>
+                                            </div>
+                        </p>
+                    </div>
+                    
+                </div>
+               
+       
+        
+            <div class="container">
+                <div class="adventure-grid"    data-aos="fade-up" data-aos-delay="400">
+                    <!-- Adventure grid item #1 -->
+                    <div class="adventure-grid-item" style="box-shadow:20px;" >
+                        <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;border-radius:30px;">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                            Ea doloribus corporis deserunt  deleniti!
+                            <div style="background-color:blue; width:150px; height:50px; border-radius:30px;">
+                                <a class="btn" href="#" style="color:#fff; padding:15px; margin-left:15px;"><h5><b>Explore ----</b></h5></a>
+                                            </div>
+                        </p>
+                    </div>
+                    <!-- Adventure grid item #2 -->
+                    <div class="adventure-grid-item"data-aos="fade-up" data-aos-delay="400">
+                        <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;border-radius:30px; ">
+                        
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                            Ea doloribus corporis deserunt deleniti!
+                            <div style="background-color:blue; width:150px; height:50px; border-radius:30px; ">
+                                <a class="btn" href="#" style="color:#fff; padding:15px; margin-left:15px;"><h5><b>Explore ----</b></h5></a>
+                                            </div>
+                        </p>
+                    </div>
+                    
+                </div>
+               
+                
+    
+        </section> 
 
         <section class="begin-adventure" id="about">
             <div class="container">
@@ -91,31 +189,7 @@
                 
     </div>
             
-        </section>
-<!--
-        <section class="container">
-            <div class="row">
-              <div class="col-sm-6">
-                <p>Information Technology</p>
-                <img src="https://media.istockphoto.com/photos/experienced-engineer-explaining-the-problems-in-construction-works-picture-id1267010934?k=20&m=1267010934&s=612x612&w=0&h=orOoQ1keF4d0axah0pr5HENABscij3Nxg-PKUV_7YK0=">
-              </div>
-              <div class="col-sm-6">
-                <p>Shipping</p>
-                <img src="https://media.istockphoto.com/photos/construction-site-view-with-tower-crane-picture-id940251778?k=20&m=940251778&s=612x612&w=0&h=bV_JpVkR4NDwsTzNffJPyhhPfmqzUTiJLi9OfodjiCY=">
-              </div>
-              <div class="col-sm-6">
-                <p>Education</p>
-                <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=">
-              </div>
-              <div class="col-sm-6">
-                <p>Artificial Intelligence</p>
-                <img src="https://media.istockphoto.com/photos/engineer-and-businessman-handshake-at-construction-site-picture-id1189913170?k=20&m=1189913170&s=612x612&w=0&h=Y_OjzAy8qiop3cglkVFitzY42TnYyEphyOfj1owqO2Q=">
-              </div>
-            </div>
-         
-          </section>
-        -->
-    
+        </section>  
     <section id="portfolio">
        
         <div class="container">
@@ -131,7 +205,20 @@
                                  </div>
                                 <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                             </figcaption>
-                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=">
+                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="border-radius:10px;  box-shadow: 0 2px 10px -3px #117964;">
+                        </figure>
+                    </div>
+                    <div class="col-lg-4 col-md-6" data-aos="zoom-in-up">
+                        <figure>
+                            <figcaption>
+                                <h3 style="color:#fff">Project Name</h3>
+                                <p style="color:#fff">Coming Soon</p>
+                                <div class="cta" style="background-color:#fff; width:150px;margin-left:90px; height:40px; border-radius:40px; text-align:center;  box-shadow: 0 2px 10px -3px #117964;" >
+                                    <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                                 </div>
+                                <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                            </figcaption>
+                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
                         </figure>
                     </div>
                     <div class="col-lg-4 col-md-6" data-aos="zoom-in-up">
@@ -144,20 +231,7 @@
                                  </div>
                                 <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                             </figcaption>
-                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=">
-                        </figure>
-                    </div>
-                    <div class="col-lg-4 col-md-6" data-aos="zoom-in-up">
-                        <figure>
-                            <figcaption>
-                                <h3 style="color:#fff">Project Name</h3>
-                                <p style="color:#fff">Coming Soon</p>
-                                <div class="cta" style="background-color:#fff; width:150px;margin-left:90px; height:40px; border-radius:40px; text-align:center;" >
-                                    <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
-                                 </div>
-                                <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
-                            </figcaption>
-                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=">
+                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
                         </figure>
                     </div>
                     <div class="col-lg-4 col-md-6" data-aos="fade-up"
@@ -171,7 +245,7 @@
                                  </div>
                                 <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                             </figcaption>
-                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=">
+                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
                         </figure>
                     </div>
                     <div class="col-lg-4 col-md-6" data-aos="fade-up"
@@ -185,7 +259,7 @@
                                  </div>
                                 <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                             </figcaption>
-                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=">
+                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="border-radius:10px;  box-shadow: 0 2px 10px -3px #117964;">
                         </figure>
                     </div>
                     <div class="col-lg-4 col-md-6" data-aos="fade-up"
@@ -199,17 +273,22 @@
                                  </div>
                                 <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                             </figcaption>
-                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=">
+                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="border-radius:10px;  box-shadow: 0 2px 10px -3px #117964;">
                         </figure>
                     </div>
                 </div>
                 
             </div>
-            <div style="background-color:blue; width:150px; height:50px; border-radius:30px;">
+            <div style="background-color:blue; width:150px; height:50px; border-radius:30px;  box-shadow: 0 2px 10px -3px #117964;">
                 <a class="btn" href="#" style="color:#fff; padding:15px; margin-left:15px;"><h5><b>Explore ----</b></h5></a>
                             </div>
         </div>
+  
+       
     </section>
+
+
+ 
     
 
   {%endblock body%}
