--- a/templates/base.html
+++ b/templates/base.html
@@ -96,52 +96,52 @@
   
 
       
-     <footer id="footer" style="background-color:rgb(41, 21, 115);"  data-aos="fade-up"
-    data-aos-duration="1000">
+     <footer id="footer" style="background-color:rgb(41, 21, 115);"  >
         <div class="footer-container">
           <div class="footer-form">
             <h2>Sign up for our newsletter</h2>
             <p>We send emails with news, articles and information about our promotions.<br>No junk mail, we promise!</p>
-            <form >
+            <form style="display:flex;" >
               <input type="email" name="mail" placeholder="Enter your email to update" style=" border-radius:40px; text-align:center;"  required>
-              <div style="background-color:#fff; background-color:#fff; width:150px; height:30px; border-radius:40px; text-align:center;" >
-                <h3> <a href="#" class="btn" style="padding:13px; background-color:#fff; margin-top:10px; border-radius:30px;  "><h5><b>Discover More</b></h5></a>
+              <div style="background-color:#fff; height:30px; border-radius:0px; text-align:center;" >
+                <h3> <a href="#" class="btn" style="padding:13px; background-color:#fff; margin-top:10px; border-radius:0px; width:190x; "><h5><b>Send</b></h5></a>
              </div>
             </form>
           </div>
     
           <div class="block">
             <div class="footer-contacts">
-              <h5>HALOVIETNAM LTD</h5><br>
-              <address>66, Dang Van ngu, Dong Da<br><br> Hanoi, Vietnam</address>
-              <a href="mailto:contact@halovietnam.com">contact@halovietnam.com<br><br></a>
-              <a href="tel:+844123456789">+844 1234 56789</a>
+              <h5><b>GENERAL INQUIRIES</b></h5><br>
+              <address>Address: 66, Dang Van ngu, Dong Da<br><br> Hanoi, Vietnam</address>
+              <a href="mailto:contact@halovietnam.com">Email: contact@halovietnam.com<br><br></a>
+              <a href="tel:+844123456789">Call: +844 1234 56789</a>
             </div>
-            <div class="footer-nav">
+            <div class="footer-nav" style="text-align:;left">
               <ul>
-                <li><a href="#">Examples</a></li>
+                <li><a href="#"><b>COMPANY</b></a></li>
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">License</a></li>
               </ul>
               <ul>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#"><b>BUSINESS</b></a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Privacy</a></li>
                 <li><a href="#">Terms</a></li>
               </ul>
               <ul>
-                <li><a href="#">Download</a></li>
+                <li><a href="#"><b>TERMS</b></a></li>
                 <li><a href="#">Support</a></li>
                 <li><a href="#">Documents</a></li>
               </ul>
               <ul>
-                <li><a href="#">Media</a></li>
+                <li><a href="#"><b>MEDIA</b></a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Forums</a></li>
               </ul>
             </div>
           </div>
-    
+          <p style="font-size:13px;"><b>© 2022 Strongskillsinternational <a herf=""> Terms Of Use.</a> <a href="">Privacy Policy</b></a></p>
+           
         </div>
       </footer>
 
