--- a/static/css/main.css
+++ b/static/css/main.css
@@ -110,8 +110,9 @@ nav {
 .hero {
     width: 100%;
     height: 80vh;
-    background: linear-gradient(135deg, rgba(49,24,131,.9) 0%, rgba(72,56,149,.8) 100%), url("https://raw.githubusercontent.com/jlop007/outdoors-website/master/tours/images/header-bg.jpg") center no-repeat;
+    background: linear-gradient(135deg, rgba(49,24,131,.9) 0%, rgba(72,56,149,.8) 100%), url("https://raw.githubusercontent.com/jlop007/outdoors-website/master/tours/images/header-bg.jpg") center no-repeat fixed;
     background-size: cover;
+   
     position: relative;
 }
 
@@ -207,6 +208,7 @@ nav {
     flex-direction: column;
     justify-content: center;
     cursor: pointer;
+  
     z-index: 1;
 }
 
@@ -214,6 +216,7 @@ nav {
     content: "";
     position: absolute;
     top: 0;
+    
     left: 0;
     width: 100%;
     height: 100%;
@@ -231,8 +234,12 @@ nav {
     background: url(https://raw.githubusercontent.com/jlop007/outdoors-website/master/tours/images/camping.jpg) center no-repeat;
 }
 
+.knee {
+  background: url(https://raw.githubusercontent.com/jlop007/outdoors-website/master/tours/images/camping.jpg)   center no-repeat fixed;background-size: cover;
+}
 .activities-grid-item i {
     font-size: 4rem;
+   
     color: #EB648C;
 }
 
@@ -582,12 +589,15 @@ footer {
 
 footer {
     background-color: #ccc;
+    position: fixed;
+    
      
   }
   
   .footer-container {
     /*height: 773px;*/
     width: 940px;
+    height: 720px;
     margin: 0 auto;
   }
   
@@ -595,8 +605,8 @@ footer {
   /* #footer form */
   
   .footer-form {
-    padding-bottom: 40px;
-    margin-bottom: 103px;
+    
+    margin-bottom: 30px;
   }
   
   .footer-form h2,
@@ -608,7 +618,7 @@ footer {
   
   .footer-form h2 {
     margin: 0;
-    padding-top: 92px;
+    padding-top: 42px;
     font-size: 32px;
     font-weight: 700;
     text-align: center;
@@ -626,7 +636,7 @@ footer {
   .footer-form form {
     height: 52px;
     /*width: 742px;*/
-    width: 80%;
+    width: 50%;
     margin: 0 auto;
   }
   
@@ -646,8 +656,8 @@ footer {
   
   .footer-form input[type=submit] {
     float: right;
-    height: 52px;
-    width: 140px;
+    height: 42px;
+   
     border: transparent;
     text-transform: uppercase;
     font-weight: 700;
@@ -676,6 +686,9 @@ footer {
   .footer-nav ul li a {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 16px;
+    padding:10px;
+    font-size: 12px;
+    text-align: left;
     color: #ffffff;
   }
   
@@ -692,6 +705,7 @@ footer {
   
   .footer-contacts a {
     display: block;
+
     margin-top: 4px;
   }
   
@@ -705,7 +719,9 @@ footer {
   .footer-nav {
     display: inline-block;
     float: right;
+    text-align:left;
     position: relative;
+  
     /*height: 140px;*/
     width: 570px;
   }
@@ -715,12 +731,14 @@ footer {
     float: left;
     height: 140px;
     width: 24%;
+    padding:10px;
     margin: 0;
     padding: 0;
   }
   
   .footer-nav ul li {
     text-align: top;
+    padding:10px;
   }
   
   /*
