--- a/templates/main.html
+++ b/templates/main.html
@@ -85,12 +85,19 @@
          
           </section>
         -->
-        <div class="adventure-grid-item"data-aos="fade-up" data-aos-delay="400">
-            <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px; margin-top:80px;height:400px;">
-            
-                
-            </p>
-        </div>
+         <div class="activities-grid-item knee"    style=" box-shadow: 0 2px 10px -3px #117964; margin-top:50px;">
+                        <i class="icon ion-md-compass"></i>
+                        <h1 >Hiking</h1>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Consequuntur excepturi 
+                            soluta labore cum enim, tempora laudantium dicta voluptates.
+                            <div class="cta" style="background-color:#fff; width:150px; height:40px; border-radius:40px; text-align:center;" >
+                                <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                             </div>
+                        </p>
+                    </div>
+     
+
+                    
     
         <section class="begin-adventure" id="about">
             <div class="container">
