--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,7 @@
                     
                 </ul>
             </nav>
+
         </div>
     </header>
     <!--li class="nav-item"><a href="#home" class="nav-link current">Home</a></li>
@@ -56,6 +57,7 @@
     <li class="nav-item"><a href="#about" class="nav-link">Media</a></li>
     <li class="nav-item"><a href="#about" class="nav-link">Contact</a></li> -->
     <main>
+
         <section class="hero" id="home" data-aos="fade-down"
         data-aos-easing="linear"
         data-aos-duration="1500">
@@ -103,8 +105,8 @@
             <p>We send emails with news, articles and information about our promotions.<br>No junk mail, we promise!</p>
             <form style="display:flex;" >
               <input type="email" name="mail" placeholder="Enter your email to update" style=" border-radius:40px; text-align:center;"  required>
-              <div style="background-color:#fff; height:30px; border-radius:0px; text-align:center;" >
-                <h3> <a href="#" class="btn" style="padding:13px; background-color:#fff; margin-top:10px; border-radius:0px; width:190x; "><h5><b>Send</b></h5></a>
+              <div style="background-color:#fff; height:30px; border-radius:10px; text-align:center;" >
+                <h3> <a href="#" class="btn" style="padding:13px; background-color:#fff; margin-top:10px; border-radius:10px; height:43px; width:190x; "><h5><b>Send</b></h5></a>
              </div>
             </form>
           </div>
