--- a/templates/main.html
+++ b/templates/main.html
@@ -167,6 +167,19 @@
     
         </section> 
 
+
+        <div class="activities-grid-item knee"    style=" box-shadow: 0 2px 10px -3px #117964; font-size:40px;   margin-top:50px;">
+            <i class="icon ion-md-compass"></i>
+            <h1 >Explore, Experience, </h1>
+            
+            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="width:700px; bordfloat:right; box-shadow: 0 2px 10px -3px #117964;">
+            <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Consequuntur excepturi 
+                soluta labore cum enim, tempora laudantium dicta voluptates.
+                
+            </p>
+        </div>
+
+
         <section class="begin-adventure" id="about">
             <div class="container">
                 <div class="title-heading">
