--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,7 @@
         AOS.init();
       </script>
     <header>
-        <div class="container" data-aos="fade-up"
-        data-aos-duration="3000">
+        <div class="container" >
             <nav>
                 <div class="nav-brand">
                     <a href="index.html">
@@ -38,7 +37,7 @@
                     <div class="menu-icons close">
                         <i class="icon ion-md-close"></i>
                     </div>
-                    <li class="nav-item"><a href="#ho" class="nav-link current">Home</a></li>
+                    <li class="nav-item"><a href="/main" class="nav-link current">Home</a></li>
                     <li class="nav-item"><a href="/about" class="nav-link">About Us</a></li>
                     <li class="nav-item"><a href="/bus" class="nav-link">Our Business</a></li>
                     <li class="nav-item"><a href="/sus" class="nav-link">Sustainability</a></li>
@@ -104,9 +103,9 @@
             <h2>Sign up for our newsletter</h2>
             <p>We send emails with news, articles and information about our promotions.<br>No junk mail, we promise!</p>
             <form style="display:flex;" >
-              <input type="email" name="mail" placeholder="Enter your email to update" style=" border-radius:40px; text-align:center;"  required>
-              <div style="background-color:#fff; height:30px; border-radius:10px; text-align:center;" >
-                <h3> <a href="#" class="btn" style="padding:13px; background-color:#fff; margin-top:10px; border-radius:10px; height:43px; width:190x; "><h5><b>Send</b></h5></a>
+              <input type="email" name="mail" placeholder="Enter your email to update" style=" border-radius: 0 0 0 10px; text-align:center;"  required>
+              <div style="background-color:#fff; height:30px; border-radius:0 0 0 40px; text-align:center;" >
+                <h3> <a href="#" class="btn" style="padding:13px; background-color:#fff; margin-top:10px; border-radius:0 0 10px; 10px;; height:43px; width:190x; "><h5><b>Send</b></h5></a>
              </div>
             </form>
           </div>
