--- a/templates/media.html
+++ b/templates/media.html
@@ -1,4 +1,206 @@
 {%extends 'base.html'%}
 {%block body%}
     
+<section id="portfolio">
+       
+    <div class="container">
+        <div class="portfolio__projects" style="margin-top:70px;">
+            <div class="row">
+                <div class="col-lg-4 col-md-6" data-aos="zoom-in-up">
+                    <figure data-aos="zoom-in-up">
+                        <figcaption >
+                            <h3 style="color:#fff">Project Name</h3>
+                            <p style="color:#fff">Coming Soon</p>
+                            <div class="cta" style="background-color:#fff; width:150px;margin-left:90px; height:40px; border-radius:40px; text-align:center;" >
+                                <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                             </div>
+                            <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                        </figcaption>
+                        <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px;  box-shadow: 0 2px 10px -3px #117964;">
+                    </figure>
+                </div>
+               
+                <div class="col-lg-4 col-md-6" data-aos="zoom-in-up">
+                    <figure>
+                        <figcaption>
+                            <h3 style="color:#fff">Project Name</h3>
+                            <p style="color:#fff">Coming Soon</p>
+                            <div class="cta" style="background-color:#fff; width:150px;margin-left:90px; height:40px; border-radius:40px; text-align:center;" >
+                                <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                             </div>
+                            <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                        </figcaption>
+                        <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
+                    </figure>
+                </div>
+                
+                <div class="col-lg-4 col-md-6" data-aos="zoom-in-up">
+                    <figure>
+                        <figcaption>
+                            <h3 style="color:#fff">Project Name</h3>
+                            <p style="color:#fff">Coming Soon</p>
+                            <div class="cta" style="background-color:#fff; width:150px;margin-left:90px; height:40px; border-radius:40px; text-align:center;" >
+                                <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                             </div>
+                            <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                        </figcaption>
+                        <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
+                    </figure>
+                </div>
+                 
+                <div class="col-lg-8 col-md-6" data-aos="zoom-in-up">
+                    <figure data-aos="fade-up" data-aos-delay="300" >
+                        <figcaption>
+                            <h3 style="color:#fff">Project Name</h3>
+                            <p style="color:#fff">Coming Soon</p>
+                           
+                            <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                        </figcaption>
+                        <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px;  box-shadow: 0 2px 10px -3px #117964;">
+                    </figure>
+                      
+                
+                <div class="mine" style="display:flex;">
+                  
+                    <div class="col-lg-6 col-md-6" data-aos="zoom-in-up">
+                        <figure>
+                            <figcaption>
+                                <h3 style="color:#fff">Project Name</h3>
+                                <p style="color:#fff">Coming Soon</p>
+                                <div class="cta" style="background-color:#fff; width:150px;margin-left:90px; height:40px; border-radius:40px; text-align:center;" >
+                                    <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                                 </div>
+                                <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                            </figcaption>
+                            <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
+                        </figure>
+                    </div>
+                      
+                <div class="col-lg- col-md-6" data-aos="zoom-in-up">
+                    <figure>
+                        <figcaption>
+                            <h3 style="color:#fff">Project Name</h3>
+                            <p style="color:#fff">Coming Soon</p>
+                            <div class="cta" style="background-color:#fff; width:150px;margin-left:90px; height:40px; border-radius:40px; text-align:center;" >
+                                <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                             </div>
+                            <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                        </figcaption>
+                        <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
+                    </figure>
+                </div>
+                  
+                <div class="col-lg-6 col-md-6" data-aos="zoom-in-up">
+                    <figure>
+                        <figcaption>
+                            <h3 style="color:#fff">Project Name</h3>
+                            <p style="color:#fff">Coming Soon</p>
+                            <div class="cta" style="background-color:#fff; width:150px;margin-left:90px; height:40px; border-radius:40px; text-align:center;" >
+                                <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                             </div>
+                            <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                        </figcaption>
+                        <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
+                    </figure>
+                </div>
+                 
+                  
+                </div>
+                </div>
+              
+                   
+        
+    </div>
+
+   
+</section>
+
+<section class="experience-outdoors" id="destinations">
+    <div class="container" >
+        
+        <div class="activities-grid">
+            <!-- Grid Item #1 -->
+            <div class="activities-grid-item star-gazing"  data-aos="fade-up" data-aos-delay="200"
+            style=" box-shadow: 0 2px 10px -3px #117964; height:300px;">
+                <i class="icon ion-md-star"></i>
+            
+               
+                <p> tempora laudantium dicta voluptates, sed quo 
+                    perspiciatis natus minus atque.
+                    <div class="cta" style="background-color:#fff; width:150px; height:40px; border-radius:40px; text-align:center;" >
+                        <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                     </div>
+            </div>
+
+            <!-- Grid Item #2 -->
+            <div class="activities-grid-item hiking"  data-aos="fade-up" data-aos-delay="300"
+          style=" box-shadow: 0 2px 10px -3px #117964; height:300px;">
+                <i class="icon ion-md-compass"></i>
+               
+                <p>tempora laudantium dicta voluptates, sed quo 
+                    perspiciatis natus minus atque.
+                    <div class="cta" style="background-color:#fff; width:150px; height:40px; border-radius:40px; text-align:center;" >
+                        <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                     </div>
+                </p>
+            </div>
+            <!-- Grid Item #3 -->
+            <div class="activities-grid-item camping"  data-aos="fade-up" data-aos-delay="400"
+            style=" box-shadow: 0 2px 10px -3px #117964; height:300px;">
+                <i class="icon ion-md-bonfire"></i>
+               
+                <p> tempora laudantium dicta voluptates, sed quo 
+                    perspiciatis natus minus atque.
+                    <div class="cta" style="background-color:#fff; width:150px; height:40px; border-radius:40px; text-align:center;" >
+                        <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                     </div>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="portfolio">
+       
+    <div class="container">
+        <div class="portfolio__projects" style="margin-top:70px;">
+            <div class="row">
+                <div class="col-lg-8 col-md-2" data-aos="zoom-in-up">
+                    <figure data-aos="zoom-in-up">
+                        <figcaption >
+                            <h3 style="color:#fff">Project Name</h3>
+                            <p style="color:#fff">Coming Soon</p>
+                            <div class="cta" style="background-color:#fff; width:150px;margin-left:90px; height:40px; border-radius:40px; text-align:center;" >
+                                <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                             </div>
+                            <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                        </figcaption>
+                        <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px;  box-shadow: 0 2px 10px -3px #117964;">
+                    </figure>
+                </div>
+               
+                <div class="col-lg-4 col-md-6" data-aos="zoom-in-up">
+                    <figure>
+                        <figcaption>
+                            <h3 style="color:#fff">Project Name</h3>
+                            <p style="color:#fff">Coming Soon</p>
+                            <div class="cta" style="background-color:#fff; width:150px;margin-left:90px; height:40px; border-radius:40px; text-align:center;" >
+                                <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                             </div>
+                            <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                        </figcaption>
+                        <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
+                    </figure>
+                </div>
+               
+               
+                   
+                </div>
+              
+                   
+        
+    </div>
+
+   
+</section>
+
 {%endblock body%}
