--- a/static/css/main.css
+++ b/static/css/main.css
@@ -55,6 +55,7 @@ nav {
     width: 100%;
     display: flex;
     align-items: center;
+   
     justify-content: space-between;
     padding: 1rem 0;
     border-bottom: 1px solid rgba(255,255,255,.2);
@@ -62,10 +63,12 @@ nav {
 
 .nav-brand {
     width: 2rem;
+   
 }
 
 .menu-icons {
     font-size: 3.5rem;
+    
     color: #FAFAFA;
     cursor: pointer;
 }
@@ -78,11 +81,12 @@ nav {
     width: 25rem;
     height: 100vh;
     background-color: #D7E4ED;
-    position: fixed;
+  
     top: 0;
     right: -26rem;
     display: flex;
     flex-direction: column;
+   
     align-items: center;
     justify-content: center;
     z-index: 1500;
@@ -101,6 +105,7 @@ nav {
 
 .nav-link {
     font-size: 1.6rem;
+ 
     text-transform: uppercase;
     color: rgba(0, 0, 0, .7);
 }
@@ -235,7 +240,8 @@ nav {
 }
 
 .knee {
-  background: url(https://raw.githubusercontent.com/jlop007/outdoors-website/master/tours/images/camping.jpg)   center no-repeat fixed;background-size: cover;
+  background: url(https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80)   center no-repeat fixed;background-size: cover;
+
 }
 .activities-grid-item i {
     font-size: 4rem;
