--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,141 @@
 {%extends 'base.html'%}
 {%block body%}
+<section class="experience-outdoors" id="destinations">
+    <div class="container"  data-aos="fade-down"
+    data-aos-easing="linear"
+    data-aos-duration="1500">
+      
+        <div class="activities-grid" style="margin-top:70px;">
+            <!-- Grid Item #1 -->
+            <div class="activities-grid-item star-gazing" data-aos="flip-left"
+            data-aos-easing="ease-out-cubic"
+            style=" box-shadow: 0 2px 10px -3px #117964;">
+            <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right;box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
+         
+            <h1><b>Mr Aggrey-Mills</b></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis 
+                distinctio molestiae pariatur voluptates porro. Consequuntur excepturi 
+                soluta labore cum enim, tempora laudantium dicta voluptates, sed quo 
+                perspiciatis natus minus atque.user
+                <p>
+                    <div class="cta" style="background-color:#fff; width:150px; height:40px; border-radius:40px; text-align:center;" >
+                        <h3> <a href="#" class="btn" style="padding:10px;margin-bottom:800px;  "><h5><b>Discover More</b></h5></a>
+                     </div>
+                </p>
+            </div>
+            <!-- Grid Item #2 -->
+            <div class="activities-grid-item hiking" data-aos="flip-left"
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="3000" style=" box-shadow: 0 2px 10px -3px #117964;">
+                <i class="icon ion-md-compass"></i>
+                <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right;box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
+         
+           
+                <h1><b>Miss Helena Ana</b></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis 
+                    distinctio molestiae pariatur voluptates porro. Consequuntur excepturi 
+                    soluta labore cum enim, tempora laudantium dicta voluptates, sed quo 
+                    perspiciatis natus minus atque.user
+                    <div class="cta" style="background-color:#fff; width:150px; height:40px; border-radius:40px; text-align:center;" >
+                        <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                     </div>
+                </p>
+            </div>
+            <!-- Grid Item #3 -->
+            <div class="activities-grid-item camping" data-aos="flip-right"
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="3000" style=" box-shadow: 0 2px 10px -3px #117964;">
+                <i class="icon ion-md-bonfire"></i>
+                <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right;box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
+         
+           
+                <h1><b>Mrs. Lawson</b></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis 
+                    distinctio molestiae pariatur voluptates porro. Consequuntur excepturi 
+                    soluta labore cum enim, tempora laudantium dicta voluptates, sed quo 
+                    perspiciatis natus minus atque.user
+                    <div class="cta" style="background-color:#fff; width:150px; height:40px; border-radius:40px; text-align:center;" >
+                        <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                     </div>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<div class="activities-grid-item knee"  data-aos="fade-up" data-aos-delay="300"  style=" box-shadow: 0 2px 10px -3px #117964; font-size:40px;   margin-top:200px;">
+    <i class="icon ion-md-compass"></i>
+    <h1 >Explore, Experience, </h1>
+    <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right; box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
     
+    <p  >Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Consequuntur excepturi 
+        soluta labore cum enim, tempora
+        
+    </p>
+</div>
+
+
+<section class="begin-adventure" id="about">
+    <div class="container">
+        <div class="title-heading" data-aos="fade-up" data-aos-delay="100" style="margin-top:70px;">
+           
+            <h1><b>Executive Leadership</b></h1>    
+            <p>    Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                Ea doloribus corporis deserunt deleniti!</p>
+        </div>
+        <div class="adventure-grid">
+            <!-- Adventure grid item #1 -->
+            <div class="adventure-grid-item">
+                <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right; box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
+                <h3 style="text-align:center; padding-top:10px;"><b>Executive Leadership</b></h3>  
+                <p style="text-align:center">
+                 President
+                </p>
+            </div>
+            <!-- Adventure grid item #2 -->
+            <div class="adventure-grid-item">
+                <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right; box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
+  
+                <h3 style="text-align:center;padding-top:10px;"><b>Executive Leadership</b></h3>  
+                <p style="text-align:center;">
+                 President
+                </p>
+            </div>
+             
+        </div>
+        <div class="adventure-grid">
+            <!-- Adventure grid item #1 -->
+            <div class="adventure-grid-item">
+                <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right; box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
+                <h3 style="text-align:center; padding-top:10px;"><b>Executive Leadership</b></h3>  
+                <p style="text-align:center">
+                 President
+                </p>
+            </div>
+            <!-- Adventure grid item #2 -->
+            <div class="adventure-grid-item">
+                <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right; box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
+  
+                <h3 style="text-align:center;padding-top:10px;"><b>Executive Leadership</b></h3>  
+                <p style="text-align:center;">
+                 President
+                </p>
+            </div>
+              <!-- Adventure grid item #2 -->
+              <div class="adventure-grid-item">
+                <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right; box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
+  
+                <h3 style="text-align:center;padding-top:10px;"><b>Executive Leadership</b></h3>  
+                <p style="text-align:center;">
+                 President
+                </p>
+            </div>
+        </div>
+       
+        
+</div>
+    
+</section>  
 {%endblock body%}
