--- a/templates/bus.html
+++ b/templates/bus.html
@@ -1,3 +1,63 @@
 {%extends 'base.html'%}
 {%block body%}
+
+<section class="begin-adventure" id="about">
+    <div class="container">
+        <div class="title-heading">
+           
+            <h1 ><b>Adventure begins</b></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="adventure-grid" data-aos="fade-up" data-aos-delay="300">
+            <!-- Adventure grid item #1 -->
+            <div class="adventure-grid-item" style="box-shadow:20px;">
+                
+                <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right; box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
+    
+  
+                <p style="   box-shadow: 0 2px 10px -3px #117964; margin-top:30px; padding:40px;border-radius:30px;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    e
+                    Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                    Ea doloribus corporis deserunt  deleniti!
+                    <div style="background-color:blue; width:150px; height:50px; border-radius:30px;">
+                        <a class="btn" href="#" style="color:#fff; padding:15px; margin-left:15px;"><h5><b>Explore ----</b></h5></a>
+                                    </div>
+                </p>
+            </div>
+            <!-- Adventure grid item #2 -->
+            <div class="adventure-grid-item" data-aos="fade-up" data-aos-delay="300" >
+                <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right; box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
+
+                <p style="   box-shadow: 0 2px 10px -3px #117964;  margin-top:30px;  padding:40px;border-radius:30px;">
+                
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                    Ea doloribus corporis deserunt deleniti!
+                    <div style="background-color:blue; width:150px; height:50px; border-radius:30px; ">
+                        <a class="btn" href="#" style="color:#fff; padding:15px; margin-left:15px;"><h5><b>Explore ----</b></h5></a>
+                                    </div>
+                </p>
+            </div>
+            
+        </div>
+       
+
+
+    
+       
+        
+
+</section> 
+
+
+<div class="activities-grid-item knee"  data-aos="fade-up" data-aos-delay="300"  style=" box-shadow: 0 2px 10px -3px #117964; font-size:40px;   margin-top:50px;">
+    <i class="icon ion-md-compass"></i>
+  
+    <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; float:right; box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
+    
+   
+</div>
+
+
 {%endblock body%}
