--- a/templates/main.html
+++ b/templates/main.html
@@ -87,12 +87,9 @@
         -->
          <div class="activities-grid-item knee"    style=" box-shadow: 0 2px 10px -3px #117964; margin-top:50px;">
                         <i class="icon ion-md-compass"></i>
-                        <h1 >Hiking</h1>
-                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Consequuntur excepturi 
-                            soluta labore cum enim, tempora laudantium dicta voluptates.
-                            <div class="cta" style="background-color:#fff; width:150px; height:40px; border-radius:40px; text-align:center;" >
-                                <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
-                             </div>
+                        <h1 style="font-size:60px; text-align:center; font-family: Times New Roman;"><b>Explore More Here<b></h1>   
+                        <h1 style="font-size:25px; text-align:center; background-color:#fff: text-transform: lowercase;" ><a href="">Need Help?</a> We are here for you!</h1>   
+                           
                         </p>
                     </div>
      
@@ -136,7 +133,7 @@
        
         
             <div class="container">
-                <div class="adventure-grid"    data-aos="fade-up" data-aos-delay="400">
+                <div class="adventure-grid"    data-aos="fade-up" data-aos-delay="300">
                     <!-- Adventure grid item #1 -->
                     <div class="adventure-grid-item" style="box-shadow:20px;" >
                         <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;border-radius:30px;">
@@ -168,13 +165,13 @@
         </section> 
 
 
-        <div class="activities-grid-item knee"    style=" box-shadow: 0 2px 10px -3px #117964; font-size:40px;   margin-top:50px;">
+        <div class="activities-grid-item knee"  data-aos="fade-up" data-aos-delay="300"  style=" box-shadow: 0 2px 10px -3px #117964; font-size:40px;   margin-top:50px;">
             <i class="icon ion-md-compass"></i>
             <h1 >Explore, Experience, </h1>
+            <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right; box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
             
-            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="width:700px; bordfloat:right; box-shadow: 0 2px 10px -3px #117964;">
-            <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Consequuntur excepturi 
-                soluta labore cum enim, tempora laudantium dicta voluptates.
+            <p  >Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Consequuntur excepturi 
+                soluta labore cum enim, tempora
                 
             </p>
         </div>
@@ -182,7 +179,7 @@
 
         <section class="begin-adventure" id="about">
             <div class="container">
-                <div class="title-heading">
+                <div class="title-heading" data-aos="fade-up" data-aos-delay="200">
                    
                     <h1><b>Adventure begins</b></h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -225,7 +222,7 @@
                                  </div>
                                 <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                             </figcaption>
-                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="border-radius:10px;  box-shadow: 0 2px 10px -3px #117964;">
+                            <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px;  box-shadow: 0 2px 10px -3px #117964;">
                         </figure>
                     </div>
                     <div class="col-lg-4 col-md-6" data-aos="zoom-in-up">
@@ -238,7 +235,7 @@
                                  </div>
                                 <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                             </figcaption>
-                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
+                            <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
                         </figure>
                     </div>
                     <div class="col-lg-4 col-md-6" data-aos="zoom-in-up">
@@ -251,7 +248,7 @@
                                  </div>
                                 <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                             </figcaption>
-                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
+                            <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
                         </figure>
                     </div>
                     <div class="col-lg-4 col-md-6" data-aos="fade-up"
@@ -265,7 +262,7 @@
                                  </div>
                                 <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                             </figcaption>
-                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
+                            <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px; box-shadow: 0 2px 10px -3px #117964;">
                         </figure>
                     </div>
                     <div class="col-lg-4 col-md-6" data-aos="fade-up"
@@ -279,7 +276,7 @@
                                  </div>
                                 <a href="#"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                             </figcaption>
-                            <img src="https://media.istockphoto.com/photos/delivering-quality-construction-for-a-quality-lifestyle-picture-id1297780288?b=1&k=20&m=1297780288&s=170667a&w=0&h=NDdDs9BBGULLwYUDUt1AjIOroHuwmFY9N6ZEDAYV7sE=" style="border-radius:10px;  box-shadow: 0 2px 10px -3px #117964;">
+                            <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="border-radius:10px;  box-shadow: 0 2px 10px -3px #117964;">
                         </figure>
                     </div>
                     <div class="col-lg-4 col-md-6" data-aos="fade-up"
