--- a/templates/sus.html
+++ b/templates/sus.html
@@ -1,3 +1,166 @@
 {%extends 'base.html'%}
 {%block body%}
+         
+    
+<section class="begin-adventure" id="about">
+    <div class="container">
+        <div class="title-heading">
+           
+            <h1 style="font-size:50px;" ><b>Adventure begins</b></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="adventure-grid" data-aos="fade-up" data-aos-delay="300">
+            <!-- Adventure grid item #1 -->
+            <div class="adventure-grid-item" style="box-shadow:20px;">
+                <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                    Ea doloribus corporis deserunt.<br>  <a href="">ready </a>
+                   
+                </p>
+            </div>
+            <!-- Adventure grid item #2 -->
+            <div class="adventure-grid-item" data-aos="fade-up" data-aos-delay="300" >
+                <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;">
+                
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                    Ea doloribus corporis deserunt <br>  <a href="">ready </a>
+                   
+                </p>
+            </div>
+            
+     
+        <div class="adventure-grid"    data-aos="fade-up" data-aos-delay="300">
+            <!-- Adventure grid item #1 -->
+            <div class="adventure-grid-item" style="box-shadow:20px;" >
+                <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                    Ea doloribus corporis deserunt  <br>  <a href="">ready </a>
+                   
+                </p>
+            </div>
+       
+        </div>
+       
+       
+        <div class="adventure-grid"    data-aos="fade-up" data-aos-delay="300">
+            <!-- Adventure grid item #1 -->
+            <div class="adventure-grid-item" style="box-shadow:20px;" >
+                <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                    Ea doloribus corporis deserunt  <br>  <a href="">ready </a>
+                   
+                </p>
+            </div>
+       
+        </div>
+       
+        
+        <div class="adventure-grid"    data-aos="fade-up" data-aos-delay="300">
+            <!-- Adventure grid item #1 -->
+            <div class="adventure-grid-item" style="box-shadow:20px;" >
+                <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                    Ea doloribus corporis deserunt  <br>  <a href="">ready </a>
+                   
+                </p>
+            </div>
+       
+        </div>
+       
+
+        <div class="adventure-grid"    data-aos="fade-up" data-aos-delay="300">
+            <!-- Adventure grid item #1 -->
+            <div class="adventure-grid-item" style="box-shadow:20px;" >
+                <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                    Ea doloribus corporis deserunt  <br>  <a href="">ready </a>
+                   
+                </p>
+            </div>
+       
+        </div>
+       
+
+        <div class="adventure-grid"    data-aos="fade-up" data-aos-delay="300">
+            <!-- Adventure grid item #1 -->
+            <div class="adventure-grid-item" style="box-shadow:20px;" >
+                <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                    Ea doloribus corporis deserunt  <br>  <a href="">ready </a>
+                   
+                </p>
+            </div>
+       
+        </div>
+       
+
+        <div class="adventure-grid"    data-aos="fade-up" data-aos-delay="300">
+            <!-- Adventure grid item #1 -->
+            <div class="adventure-grid-item" style="box-shadow:20px;" >
+                <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Eum recusandae eveniet, deleniti fugit eligendi sequi? 
+                    Ea doloribus corporis deserunt  <br>  <a href="">ready </a>
+                   
+                </p>
+            </div>
+       
+        </div>
+       
+
+</section> 
+<section class="experience-outdoors" id="destinations">
+    <div class="container" >
+        
+        <div class="activities-grid">
+            <!-- Grid Item #1 -->
+            <div class="activities-grid-item star-gazing"  data-aos="fade-up" data-aos-delay="200"
+            style=" box-shadow: 0 2px 10px -3px #117964; height:300px;">
+                <i class="icon ion-md-star"></i>
+            
+               
+                <p> tempora laudantium dicta voluptates, sed quo 
+                    perspiciatis natus minus atque.
+                    <div class="cta" style="background-color:#fff; width:150px; height:40px; border-radius:40px; text-align:center;" >
+                        <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                     </div>
+            </div>
+            <!-- Grid Item #2 -->
+            <div class="activities-grid-item hiking"  data-aos="fade-up" data-aos-delay="300"
+          style=" box-shadow: 0 2px 10px -3px #117964; height:300px;">
+                <i class="icon ion-md-compass"></i>
+               
+                <p>tempora laudantium dicta voluptates, sed quo 
+                    perspiciatis natus minus atque.
+                    <div class="cta" style="background-color:#fff; width:150px; height:40px; border-radius:40px; text-align:center;" >
+                        <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                     </div>
+                </p>
+            </div>
+            <!-- Grid Item #3 -->
+            <div class="activities-grid-item camping"  data-aos="fade-up" data-aos-delay="400"
+            style=" box-shadow: 0 2px 10px -3px #117964; height:300px;">
+                <i class="icon ion-md-bonfire"></i>
+               
+                <p> tempora laudantium dicta voluptates, sed quo 
+                    perspiciatis natus minus atque.
+                    <div class="cta" style="background-color:#fff; width:150px; height:40px; border-radius:40px; text-align:center;" >
+                        <h3> <a href="#" class="btn" style="padding:10px;    "><h5><b>Discover More</b></h5></a>
+                     </div>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+ 
+    
+
 {%endblock body%}
