--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,76 @@
 {%extends 'base.html'%}
 {%block body%}
-    
+   
+<section class="begin-adventure" id="about">
+    <div class="container">
+        <div class="title-heading">
+           
+            <h1 ><b>Let's Start a Conversation</b></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="adventure-grid" data-aos="fade-up" data-aos-delay="300">
+            <!-- Adventure grid item #1 -->
+            <div class="adventure-grid-item" style="box-shadow:20px;">
+                <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px; width:700px; height:700px;">
+                    
+                 
+                        <label for="exampleFormControlInput1" class="form-label">Your Name</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1"  style="height:45px;">
+
+                        <label for="exampleFormControlInput1" class="form-label" style="margin-top:20px;">Email address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" style="height:45px;">
+                   <label for="exampleFormControlInput1" class="form-label" style="margin-top:20px;">Your Address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="" style="height:45px;">
+                      
+                        <label for="exampleFormControlTextarea1" class="form-label" style="margin-top:20px;">Your Message</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="height:300px;"></textarea>
+                     
+                </p>
+            </div>
+            <!-- Adventure grid item #2 -->
+            <div class="adventure-grid-item" data-aos="fade-up" data-aos-delay="300" >
+               
+                <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;float:right;">
+                    <b> General Inquiries</b><br>
+                     Call : +234 1 448 0815, +234 1 448 0816<br>
+                      Fax : +234 1 463 0316, +234 1 271 2231<br>
+                       Email: communications@dangote.com
+                     
+                     
+                        
+                     
+                    
+                 </p>
+                 <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;float:right;">
+                    <b>
+                     Corporate Head Office:  </b><br>
+                     Union Marble House 1 Alfred Rewane ,<br>
+                     PMB 40032, Falomo Ikoyi, Lagos, Nigeria<br>
+                      
+                     
+ 
+                     
+                        
+                     
+                    
+                 </p>
+                 <p style="   box-shadow: 0 2px 10px -3px #117964; padding:40px;float:right;">
+                    <b> Find Us</b><br>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15880.086156125162!2d-0.031206860449206526!3d5.710026199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf819320913a5f%3A0xfd804cb8734ca8a3!2sDelish%20DeliRose%20Foods!5e0!3m2!1sen!2sgh!4v1664985380139!5m2!1sen!2sgh" width="300" height="250" style="border:0;" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                     
+                        
+                     
+                    
+                 </p>
+            </div>
+            
+            
+        </div>
+       
+
+
+  
+        
+
+</section>  
 {%endblock body%}
