--- a/templates/media.html
+++ b/templates/media.html
@@ -114,6 +114,16 @@
 
    
 </section>
+<div class="activities-grid-item knee"  data-aos="fade-up" data-aos-delay="300"  style=" box-shadow: 0 2px 10px -3px #117964; font-size:40px;   margin-top:50px;">
+    <i class="icon ion-md-compass"></i>
+    <h1 >Explore, Experience, </h1>
+    <img src="https://images.unsplash.com/photo-1642012614387-272c9aec3301?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" style="width:700px; bordfloat:right; box-shadow: 0 2px 10px -3px #117964;" data-aos="fade-up" data-aos-delay="300">
+    
+    <p  >Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Consequuntur excepturi 
+        soluta labore cum enim, tempora
+        
+    </p>
+</div>
 
 <section class="experience-outdoors" id="destinations">
     <div class="container" >
@@ -202,5 +212,6 @@
 
    
 </section>
+
 
 {%endblock body%}
